<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_jamaah"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_nama_jamaah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/ed_hint_nama" />

        <TextView
            android:id="@+id/tv_alamat_jamaah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/ed_hint_alamat" />

        <TextView
            android:id="@+id/tv_tgl_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tgl_input" />
    </LinearLayout>
</androidx.cardview.widget.CardView>